changes made in html and css

--- a/index.html
+++ b/index.html
@@ -61,9 +61,6 @@
 
         <div class="available">
             <h6>Available on</h6>
-            <img width="25" height="25"
-                src="https://img.icons8.com/external-justicon-lineal-color-justicon/64/external-apple-halloween-justicon-lineal-color-justicon.png"
-                alt="Apple app icon" />
             <img width="35" height="40" src="https://img.icons8.com/fluency/48/google-play-store-new.png"
                 alt="Google Play Store icon" />
         </div>
@@ -198,7 +195,41 @@
                 <p>Get a professionally-trained and trusted cook on time</p>
             </div>
         </div>
+
+        <!-- small screen view -->
+        <div class="steps-sm">
+            <div class="sm1">
+                <div class="step-1">
+                    <img class="width" src="images/Register_on_app_4372ed1276.svg">
+                    <h4>1.Register on App</h4>
+                </div>
+                <div class="arrow">
+                    <img src="images/Connector.svg">
+                </div>
+                <div class="step-1">
+                    <img class="width" src="images/select_your_service_7ba59dddd5.svg">
+                    <h4>2.Select Your Service</h4>
+                </div>
+                <div class="arrow rotate">
+                    <img src="images/Connector.svg">
+                </div>
+            </div>
+            <div class="sm2">
+                <div class="step-1">
+                    <img  class="width" src="images/make_payment_50309d2915.svg">
+                    <h4>3.Fill Details & Pay</h4>
+                </div>
+                <div class="arrow rotate2">
+                    <img src="images/Connector.svg">
+                </div>
+                <div class="step-1">
+                    <img class="width" src="images/Get_a_cook_b0e201f46a.svg">
+                    <h4>4.Get a Cook</h4>
+                </div>
+            </div>
+        </div>
     </div>
+
 
     <!-- fifth page -->
 
@@ -353,7 +384,7 @@
 
     <!-- footer-image -->
     <div class="footer-image">
-        <h2>🍛 No more missing ghar ka khana — join the journey today! 🏠❤️</h2>
+        <h2>No more missing ghar ka khana — join the journey today! 🏠❤️</h2>
         <p>Let our cooks bring memories of home to your plate.</p>
     </div>
 
