--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
     <title>Cooking website</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="home.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -36,17 +36,17 @@
                     Our Services
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">Chefit: One-time cook</a></li>
-                    <li><a class="dropdown-item" href="#">Chef for party</a></li>
-                    <li><a class="dropdown-item" href="#">Connect with Nutrihomes🥘</a></li>
+                    <li><a class="dropdown-item" href="form.html">Chefit: One-time cook</a></li>
+                    <li><a class="dropdown-item" href="form.html">Chef for party</a></li>
+                    <li><a class="dropdown-item" href="contact.html">About Us</a></li>
                 </ul>
             </div>
             <div class="link">
-                <a href='#'>Cooks Near Me👨‍🍳</a>
+                <a href='#cooks-near-me'>Cooks Near Me👨‍🍳</a>
             </div>
         </div>
         <div class="contact">
-            <button class="btn btn-primary" type="submit"
+            <button class="btn btn-primary contact" type="submit"
                 style="background-color: orange; color: white; font-weight: bolder">Contact Us ☎️</button>
         </div>
     </nav>
@@ -56,7 +56,7 @@
             <p>Operational in all metro cities.</p>
             <h1>The Reliable Choice for At-Home Chef Services.</h1>
             <div class="orange">Find your perfect cook.</div>
-            <button type="button" class="btn btn-warning">Book Now</button>
+            <button type="button" class="btn btn-warning form">Book Now</button>
         </div>
 
         <div class="available">
@@ -91,8 +91,8 @@
                         <h3>₹2000/visit</h3>
                         </p>
                         <div class="design-btn">
-                            <a href="#" class="btn btn-primary">Book Now</a>
-                            <a href="#" class="btn btn-secondary">Learn More</a>
+                            <button type="submit" class="btn btn-primary book">Book Now</button>
+                            <a href="contact.html" class="btn btn-secondary">Learn More</a>
                         </div>
                     </div>
                 </div>
@@ -216,7 +216,7 @@
             </div>
             <div class="sm2">
                 <div class="step-1">
-                    <img  class="width" src="images/make_payment_50309d2915.svg">
+                    <img class="width" src="images/make_payment_50309d2915.svg">
                     <h4>3.Fill Details & Pay</h4>
                 </div>
                 <div class="arrow rotate2">
@@ -299,7 +299,7 @@
     </div>
 
     <!-- gallary -->
-    <div class="gallery">
+    <div class="gallery" id="cooks-near-me">
         <h3 class="text-center mb-4">👨‍🍳 Passion on a Plate — Meet Our Chefs! 🍽️</h3>
         <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
 
@@ -392,17 +392,16 @@
     <div class="footer">
         <div class="download">
             <img src="images/logo.png" class="nav-logo" alt="Download">
-            <h6>Get the app now</h6>
         </div>
         <div class="footer1">
-            <h3>Chefit: One-Time Cook</h3>
-            <h3>Connect With Us</h3>
-            <h3>Cooks Near Me</h3>
+            <h3><a href="form.html">Chefit: One-Time Cook</a></h3>
+            <h3><a href="contact.html">Connect With Us</a></h3>
+            <h3><a href="nearby-cooks.html">Cooks Near Me</a></h3>
         </div>
         <div class="footer2">
-            <h3>Chef For Party</h3>
-            <h3>Contact Us</h3>
-            <h3>About Us</h3>
+            <h3><a href="form.html">Chef For Party</a></h3>
+            <h3><a href="contact.html">Contact Us</a></h3>
+            <h3><a href='#cooks-near-me'>About Us</a></h3>
         </div>
         <div class="footer3">
             <h6>Follow Us On</h6>
@@ -421,7 +420,7 @@
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
         crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <script src="script.js"></script>
+    <script src="home.js"></script>
 
 </body>
 
