stickey button is working now

--- a/home.html
+++ b/home.html
@@ -57,13 +57,36 @@
             <h1>The Reliable Choice for At-Home Chef Services.</h1>
             <div class="orange">Find your perfect cook.</div>
             <button type="button" class="btn btn-warning form">Book Now</button>
+            
+            
+            <!-- <stikey item -->
+                <div class="modal" tabindex="-1" id="exampleModal" data-bs-backdrop="false">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable ">
+                        <div class="modal-content background">
+                            <div class="modal-header">
+                                <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                    aria-label="Close"></button> 
+                            </div>
+                            <div class="modal-body">
+                                <div class="stickey">
+                                    <div class="container2">
+                                        <img src="images/qr.svg" alt="qr code" class="qr-code">
+                                        <h2>Download the App</h2>
+                                        <p>Download the app for seamless experience</p>
+                                    </div>
+                                </div>
+                            </div>
+                    </div>
+                </div>
+            </div>
         </div>
-
-        <div class="available">
+        <!-- available -->
+        <button class="available" id="side-bar" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <h6>Available on</h6>
             <img width="35" height="40" src="https://img.icons8.com/fluency/48/google-play-store-new.png"
                 alt="Google Play Store icon" />
-        </div>
+        </button>
+
     </div>
     <!-- second-page -->
     <div class="second-page">
