finalize mobile responsiveness across all components

--- a/home.html
+++ b/home.html
@@ -61,7 +61,7 @@
             
             <!-- <stikey item -->
                 <div class="modal" tabindex="-1" id="exampleModal" data-bs-backdrop="false">
-                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable ">
+                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-center ">
                         <div class="modal-content background">
                             <div class="modal-header">
                                 <button type="button" class="btn-close" data-bs-dismiss="modal"
@@ -275,8 +275,8 @@
             <video autoplay muted loop playsinline>
                 <source src="images/hygiene_740470aa24.mp4" type="video/mp4">
             </video>
-            <div class="content">
-                <h2 style="font-size:6em">Your Safety, Our Top-Priority</h2>
+            <div class="content2">
+                <h2>Your Safety, Our Top-Priority</h2>
                 <p>All our cooks follow the food safety guidelines & <span style="color:orange;">adhere to hygienic
                         practices.</span></p>
             </div>
